--- a/_posts/2014-02-15-scipy.markdown
+++ b/_posts/2014-02-15-scipy.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "An Introduction to SciPy & Pandas"
+title:  "Resources for 'An Introduction to SciPy & Pandas'"
 author: olooney
 date:   2014-02-15 18:59:59
 ---
